# bagex

./: Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
src/: args.rs  config.rs  lib.rs  main.rs  utils.rs
