[package]
name = "bagex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
env_logger = "0.8"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3"
toml = "0.5"
