[package]
name = "bagex"
version = "0.2.2"
edition = "2018"
description = "Manage environment of executables with ease"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
license = "MIT"
repository = "https://github.com/blurgyy/bagex"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
pretty_env_logger = "0.4"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
shellexpand = "2.1"
structopt = "0.3"
toml = "0.5"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Jul 27 2021, 21:43 [CST]
